Mon Nov 02 17:15:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager.py,xappy/cachemanager/__init__.py,
	  xappy/cachemanager/generic.py,xappy/cachemanager/xapian_manager.py:
	  Refactor cachemanager into a submodule, and separate the
	  xapian-based cache into a separate file, so we can do a
	  conditional import of it, handling the caes of Xapian not being
	  installed more cleanly.

Mon Nov 02 03:28:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Pass the xappy.Query to the
	  SearchResults object, not the xapian Query.

Mon Nov 02 03:14:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager.py,xappy/indexerconnection.py,
	  xappy/searchconnection.py: Initial implementation of pre-cached
	  searches.  Uses the value slots to hold information about the
	  ranks assigned by the pre-cached searches, which is relatively
	  inefficient on flint.
	* xappy/unittests/cachemanager.py: Test of the cachemanager
	  implemetnation.
	* xappy/unittests/cached_searches.py: Test that searches using the
	  cachemanager work correctly.

Sun Nov 01 21:10:10 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/unittests/docids.py: Allow a
	  Xapian document ID to be specified to the add(), replace(), and
	  delete() methods. 

Sun Nov 01 21:07:32 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* test.py: Skip test modules which depend on missing modules,
	  displaying an appropriate message. 

Sun Nov 01 21:01:54 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoint revision numbers.

Mon Sep 07 08:13:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix wildcard support; was omitting
	  a "self" when looking for the wildcard flags.

Fri Sep 04 14:04:00 GMT 2009  Charlie Hull <charlie@flax.co.uk>
